--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "src/assets/css/styles.min.css",
-              "src/assets/bootstrap/css/bootstrap.min.css"
-            ],
+              "src/styles.css"
+                       ],
             "scripts": [
               "src/assets/js/script.min.js"
             ]
