--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "angular-bootstrap": "^0.12.2",
     "angular-font-awesome": "^3.1.2",
+    "firebase": "^9.9.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
