--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.3",
     "ngx-bootstrap": "^9.0.0",
+    "react": "^18.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
